Import of INGY/perl5-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: perl5
gitpan-cpan-version:      0.02
gitpan-cpan-path:         INGY/perl5-0.02.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.02
+date:    Mon Jun  6 02:07:57 EST 2011
+changes:
+- Release with major bug fix in Module::Package
+---
 version: 0.01
 date:    Sun Jun  5 21:43:19 EST 2011
 changes:
