Import of INGY/perl5-0.03.tar.gz from CPAN.
gitpan-cpan-distribution: perl5
gitpan-cpan-version:      0.03
gitpan-cpan-path:         INGY/perl5-0.03.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.03
+date:    Tue Jun  7 17:34:37 EST 2011
+changes:
+- Release with Module::Package 0.22
+---
 version: 0.02
 date:    Mon Jun  6 02:07:57 EST 2011
 changes:
