--- a/lib/perl5.pod
+++ b/lib/perl5.pod
@@ -21,6 +21,8 @@ It allows people to create plugins like C<perl5::foo> and C<perl5::bar> that
 are sets of useful modules that have been tested together and are known to
 create joy.
 
+This module, C<perl5>, is generally the base class to such a plugin.
+
 =head1 USAGE
 
 This:
@@ -34,8 +36,8 @@ Is equivalent in Perl to:
 The C<perl5> module takes the first argument in the C<use> command, and uses
 it to find a plugin, like C<perl5::foo> in this case.
 
-C<perl5::foo> is typically just a subclass of L<perl5::base>. It invoke a set
-of modules for its caller.
+C<perl5::foo> is typically just a subclass of L<perl5>. It invoke a set of
+modules for its caller.
 
 If you use C<perl5> with no arguments, like this:
 
@@ -43,14 +45,32 @@ If you use C<perl5> with no arguments, like this:
 
 It is the same as saying:
 
-    use perl5-base
-
-In other words, it just assumes the perl5 plugin base class. This is actually
-useful. It is equivalent to:
-
     use 5.010;
     use strict;
     use warnings;
+
+=head1 API
+
+To create a plugin called C<perl5::foo> that gets called like this:
+
+    use perl5-foo;
+
+Write some code like this:
+
+    package perl5::foo;
+    use perl5;
+    our $VERSION = 0.12;
+    our @ISA = qw[perl5];
+
+    # These is the code that will be run when people use your module:
+    sub code {
+        return <<"...";
+    use SomeModule 0.22;
+    use OtherModule 0.33 option1 => 2;
+    ...
+    }
+
+    1;
 
 =head1 INSPIRATION
 
