--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.05
+date:    Sun Jul 17 12:10:30 PDT 2011
+changes:
+- Support 'use perl5 v10.0' usage
+- Test all usage combinations
+---
 version: 0.04
 date:    Sun Jun 12 13:46:16 EST 2011
 changes:
