--- a/lib/perl5.pod
+++ b/lib/perl5.pod
@@ -6,11 +6,23 @@ perl5 - Use a Bunch of Modules in One Go
 
 =head1 SYNOPSIS
 
-    use perl5;
+Use a version of Perl and its feature set:
+
+    use perl5;      # Same as 'use perl5 v5.10.0;'
+    use perl5 v14.1;
+    use perl5 14.1;
+    use perl5-14.1;
+
+Use a bundled feature set from a C<perl5> plugin:
+
     use perl5-i;
     use perl5-2i;
     use perl5-ingy;
     use perl5-yourShinyPlugin;
+
+Or both:
+
+    use perl5 v14.1 -shiny;
 
 =head1 DESCRIPTION
 
@@ -36,8 +48,8 @@ Is equivalent in Perl to:
 The C<perl5> module takes the first argument in the C<use> command, and uses
 it to find a plugin, like C<perl5::foo> in this case.
 
-C<perl5::foo> is typically just a subclass of L<perl5>. It invoke a set of
-modules for its caller.
+C<perl5::foo> is typically just a subclass of L<perl5::base>. It invoke a set
+of modules for its caller.
 
 If you use C<perl5> with no arguments, like this:
 
@@ -49,6 +61,17 @@ It is the same as saying:
     use strict;
     use warnings;
 
+If you use it with a version, like this:
+
+    use perl5 v14;
+
+It is the same as saying:
+
+    use v5.14;
+    use strict;
+    use warnings;
+    use feature ':5.14';
+
 =head1 API
 
 To create a plugin called C<perl5::foo> that gets called like this:
@@ -58,9 +81,8 @@ To create a plugin called C<perl5::foo> that gets called like this:
 Write some code like this:
 
     package perl5::foo;
-    use perl5;
+    use base 'perl5';
     our $VERSION = 0.12;
-    our @ISA = qw[perl5];
 
     # These is the code that will be run when people use your module:
     sub code {
@@ -82,12 +104,13 @@ of Perl modules for all of us.
     THIS IS PERL! THERE ARE NO STANDARDS!
 
 ...and I told him so. I also promised that I would show him my feelings in
-code. Schwern, I<this> is how I feel!
-
-For extra credit, I will release perl5::i, that will attempt to be equivalent
-to perl5i::latest (except better at golf).
+code. Schwern, I<this> is how I feel! See also L<perl5::i>.
 
 DISCLAIMER: Mr Schwern has my full love and respect, and knows it well. :)
+
+=head1 THANKS
+
+Special thanks to mst, audreyt and obra for ideas and support.
 
 =head1 SEE ALSO
 
@@ -113,7 +136,7 @@ Ingy döt Net <ingy@ingy.net>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (c) 2010. Ingy döt Net.
+Copyright (c) 2011. Ingy döt Net.
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
