Import of INGY/perl5-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: perl5
gitpan-cpan-version:      0.06
gitpan-cpan-path:         INGY/perl5-0.06.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -77,12 +77,16 @@ API
         use base 'perl5';
         our $VERSION = 0.12;
 
-        # These is the code that will be run when people use your module:
-        sub code {
-            return <<"...";
-        use SomeModule 0.22;
-        use OtherModule 0.33 option1 => 2;
-        ...
+        # These is the list of modules (with optional version and arguments)
+        sub imports {
+            return (
+                strict =>
+                warnings =>
+                features => [':5.10'],
+                SomeModule => 0.22,
+                OtherModule => 0.33, [option1 => 2],
+                Module => [],   # Don't invoke Module's import() method
+            );
         }
 
         1;
