--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.07
+date:    Mon Jul 18 17:14:13 PDT 2011
+changes:
+- Use feature set from requested version
+- Update docs
+---
 version: 0.06
 date:    Sun Jul 17 22:36:56 PDT 2011
 changes:
