--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    perl5 - Use a Bunch of Modules in One Go
+    perl5 - Use a Perl 5 group of modules/features
 
 SYNOPSIS
     Use a version of Perl and its feature set:
@@ -13,7 +13,7 @@ SYNOPSIS
 
         use perl5-i;
         use perl5-2i;
-        use perl5-ingy;
+        use perl5-modern;
         use perl5-yourShinyPlugin;
 
     Or both:
@@ -42,18 +42,8 @@ USAGE
     The "perl5" module takes the first argument in the "use" command, and
     uses it to find a plugin, like "perl5::foo" in this case.
 
-    "perl5::foo" is typically just a subclass of perl5::base. It invoke a
-    set of modules for its caller.
-
-    If you use "perl5" with no arguments, like this:
-
-        use perl5;
-
-    It is the same as saying:
-
-        use 5.010;
-        use strict;
-        use warnings;
+    "perl5::foo" is typically just a subclass of perl5. It invokes a set of
+    modules for its caller.
 
     If you use it with a version, like this:
 
@@ -66,7 +56,20 @@ USAGE
         use warnings;
         use feature ':5.14';
 
-API
+    If you use "perl5" with no arguments, like this:
+
+        use perl5;
+
+    It is the same as saying:
+
+        use perl5 v10;
+
+PLUGIN API
+    This module uses lexically-wrapped-goto-chaining-magic to correctly load
+    a set of modules (including optional version requirements and import
+    options) into the user's code. The API for specifying a perl5 plugin is
+    very simple.
+
     To create a plugin called "perl5::foo" that gets called like this:
 
         use perl5-foo;
@@ -100,13 +103,11 @@ INSPIRATION
         THIS IS PERL! THERE ARE NO STANDARDS!
 
     ...and I told him so. I also promised that I would show him my feelings
-    in code. Schwern, *this* is how I feel! See also perl5::i.
-
-    DISCLAIMER: Mr Schwern has my full love and respect, and knows it well.
-    :)
+    in code. Schwern, *this* is how I feel! (See also: perl5::i)
 
 THANKS
-    Special thanks to mst, audreyt and obra for ideas and support.
+    Special thanks to schwern, mstrout, audreyt, rodrigo and jesse for ideas
+    and support.
 
 SEE ALSO
     *   perl5i
