--- a/lib/perl5.pod
+++ b/lib/perl5.pod
@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-perl5 - Use a Bunch of Modules in One Go
+perl5 - Use a Perl 5 group of modules/features
 
 =head1 SYNOPSIS
 
@@ -17,7 +17,7 @@ Use a bundled feature set from a C<perl5> plugin:
 
     use perl5-i;
     use perl5-2i;
-    use perl5-ingy;
+    use perl5-modern;
     use perl5-yourShinyPlugin;
 
 Or both:
@@ -48,18 +48,8 @@ Is equivalent in Perl to:
 The C<perl5> module takes the first argument in the C<use> command, and uses
 it to find a plugin, like C<perl5::foo> in this case.
 
-C<perl5::foo> is typically just a subclass of L<perl5::base>. It invoke a set
-of modules for its caller.
-
-If you use C<perl5> with no arguments, like this:
-
-    use perl5;
-
-It is the same as saying:
-
-    use 5.010;
-    use strict;
-    use warnings;
+C<perl5::foo> is typically just a subclass of L<perl5>. It invokes a set of
+modules for its caller.
 
 If you use it with a version, like this:
 
@@ -72,7 +62,19 @@ It is the same as saying:
     use warnings;
     use feature ':5.14';
 
-=head1 API
+If you use C<perl5> with no arguments, like this:
+
+    use perl5;
+
+It is the same as saying:
+
+    use perl5 v10;
+
+=head1 PLUGIN API
+
+This module uses lexically-wrapped-goto-chaining-magic to correctly load a set
+of modules (including optional version requirements and import options) into
+the user's code. The API for specifying a perl5 plugin is very simple.
 
 To create a plugin called C<perl5::foo> that gets called like this:
 
@@ -108,13 +110,12 @@ of Perl modules for all of us.
     THIS IS PERL! THERE ARE NO STANDARDS!
 
 ...and I told him so. I also promised that I would show him my feelings in
-code. Schwern, I<this> is how I feel! See also L<perl5::i>.
-
-DISCLAIMER: Mr Schwern has my full love and respect, and knows it well. :)
+code. Schwern, I<this> is how I feel! (See also: L<perl5::i>)
 
 =head1 THANKS
 
-Special thanks to mst, audreyt and obra for ideas and support.
+Special thanks to schwern, mstrout, audreyt, rodrigo and jesse for ideas and
+support.
 
 =head1 SEE ALSO
 
