Import of INGY/perl5-0.08.tar.gz from CPAN.
gitpan-cpan-distribution: perl5
gitpan-cpan-version:      0.08
gitpan-cpan-path:         INGY/perl5-0.08.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.08
+date:    Tue Jul 19 06:33:06 PDT 2011
+changes:
+- Apply changes to support lack of import sub for modules from audreyt++
+---
 version: 0.07
 date:    Mon Jul 18 17:14:13 PDT 2011
 changes:
