--- a/lib/perl5.pod
+++ b/lib/perl5.pod
@@ -18,21 +18,21 @@ perl5 - Use a Perl 5 group of modules/features
 
 Use a version of Perl and its feature set:
 
-      use perl5;      # Same as 'use perl5 v5.10.0;'
-      use perl5 v14.1;
-      use perl5 14.1;
-      use perl5-14.1;
+    use perl5;      # Same as 'use perl5 v5.10.0;'
+    use perl5 v14.1;
+    use perl5 14.1;
+    use perl5-14.1;
 
 Use a bundled feature set from a C<perl5> plugin:
 
-      use perl5-i;
-      use perl5-2i;
-      use perl5-modern;
-      use perl5-yourShinyPlugin;
+    use perl5-i;
+    use perl5-2i;
+    use perl5-modern;
+    use perl5-yourShinyPlugin;
 
 Or both:
 
-      use perl5 v14.1 -shiny;
+    use perl5 v14.1 -shiny;
 
 =head1 DESCRIPTION
 
@@ -49,11 +49,11 @@ This module, C<perl5>, is generally the base class to such a plugin.
 
 This:
 
-      use perl5-foo;
+    use perl5-foo;
 
 Is equivalent in Perl to:
 
-      use perl5 '-foo';
+    use perl5 '-foo';
 
 The C<perl5> module takes the first argument in the C<use> command, and uses
 it to find a plugin, like C<perl5::foo> in this case.
@@ -63,22 +63,22 @@ modules for its caller.
 
 If you use it with a version, like this:
 
-      use perl5 v14;
+    use perl5 v14;
 
 It is the same as saying:
 
-      use v5.14;
-      use strict;
-      use warnings;
-      use feature ':5.14';
+    use v5.14;
+    use strict;
+    use warnings;
+    use feature ':5.14';
 
 If you use C<perl5> with no arguments, like this:
 
-      use perl5;
+    use perl5;
 
 It is the same as saying:
 
-      use perl5 v10;
+    use perl5 v10;
 
 =head1 PLUGIN API
 
@@ -88,27 +88,27 @@ the user's code. The API for specifying a perl5 plugin is very simple.
 
 To create a plugin called C<perl5::foo> that gets called like this:
 
-      use perl5-foo;
+    use perl5-foo;
 
 Write some code like this:
 
-      package perl5::foo;
-      use base 'perl5';
-      our $VERSION = 0.12;
+    package perl5::foo;
+    use base 'perl5';
+    our $VERSION = 0.12;
 
-      # These is the list of modules (with optional version and arguments)
-      sub imports {
-          return (
-              strict =>
-              warnings =>
-              features => [':5.10'],
-              SomeModule => 0.22,
-              OtherModule => 0.33, [option1 => 2],
-              Module => [],   # Don't invoke Module's import() method
-          );
-      }
+    # These is the list of modules (with optional version and arguments)
+    sub imports {
+        return (
+            strict =>
+            warnings =>
+            features => [':5.10'],
+            SomeModule => 0.22,
+            OtherModule => 0.33, [option1 => 2],
+            Module => [],   # Don't invoke Module's import() method
+        );
+    }
 
-      1;
+    1;
 
 =head1 INSPIRATION
 
@@ -117,7 +117,7 @@ about it at the 2010 OSDC in Melbourne. By "inspired" I mean that I was
 perturbed by Schwern's non-TMTOWTDI attitude towards choosing a standard set
 of Perl modules for all of us.
 
-      THIS IS PERL! THERE ARE NO STANDARDS!
+B<THIS IS PERL! THERE ARE NO STANDARDS!>
 
 ...and I told him so. I also promised that I would show him my feelings in
 code. Schwern, I<this> is how I feel! (See also: L<perl5::i>)
@@ -133,7 +133,7 @@ Ingy döt Net <ingy@cpan.org>
 
 =head1 COPYRIGHT
 
-Copyright (c) 2008-2014. Ingy döt Net.
+Copyright 2011-2014. Ingy döt Net.
 
 This program is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
