--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.15 Tue Jul 15 11:36:57 PDT 2014
+ - Not recommending perl5::i for now. Breaks travis.
+ - Also indexing seems wedged on PAUSE.
+
 0.14 Mon Jul 14 14:38:01 PDT 2014
  - Fix Meta and add Contributing file.
 
