--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.16 Wed Jul 30 16:04:33 PDT 2014
+ - Switch IRC to
+
 0.15 Tue Jul 15 11:36:57 PDT 2014
  - Not recommending perl5::i for now. Breaks travis.
  - Also indexing seems wedged on PAUSE.
